# seamock

./: CMakeLists.txt  LICENSE  README.md  paper.md
.github/workflows/: main.yml
docker/: README.md  seamock.Dockerfile
examples/: CMakeLists.txt  extract_tests.cmake.in  verify.py.in
examples/seahorn/: CMakeLists.txt  sea.yaml  sea_base.yaml  sea_cex_base.yaml
examples/seahorn/discover_tests/: CMakeLists.txt  README.txt  example_discover_tests.c
examples/seahorn/ipc/: CMakeLists.txt
examples/seahorn/ipc/fake/: CMakeLists.txt  fake_env.c
examples/seahorn/ipc/include/: env.h  ipc.h
examples/seahorn/ipc/lib/: CMakeLists.txt  ipc.c
examples/seahorn/ipc/summary/: CMakeLists.txt  summ_env.c
examples/seahorn/ipc/vmock/: CMakeLists.txt  mock_env.cc
examples/seahorn/ipc/vmock_invokefn/: CMakeLists.txt  mock_env.cc
src/include/: seamock.hh  seamock_unit_proof.h
